parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail07.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail07.json
---
Err(
    ExpectedTokenError {
        expected: [
            Eof,
        ],
        actual: Comma,
        invalid_row: 1,
        invalid_col: 26,
    },
)
