parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail10.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail10.json
---
Err(
    ExpectedTokenError {
        expected: [
            Eof,
        ],
        actual: String,
        invalid_row: 1,
        invalid_col: 35,
    },
)
