parser/src/snapshots/parser__parser__tests__parse_test_data@fail__fail14.json.snap
---
source: parser/src/parser.rs
expression: parser.parse(&bump)
input_file: test_data/fail/fail14.json
---
Err(
    ExpectedTokenError {
        expected: [
            Comma,
            RBrace,
        ],
        actual: Illegal(
            None,
        ),
        invalid_row: 1,
        invalid_col: 28,
    },
)
